--- a/src/App.css
+++ b/src/App.css
@@ -6,22 +6,26 @@
 li {
   list-style: none;
 }
-body {
-  height: 100%;
+body {position: relative;
+  height: 100vh;
 }
 .container {
-  max-width: 500px;
-  margin: 0 auto;
+ width: 500px;
+  margin: 0 auto;z-index: 10;position: relative;top: 150px;
 }
 h1 {
   color: white;
-  margin-top: 150px;
-  margin-bottom: 50px;
+  display: flex;justify-content: space-between;
+  margin-bottom: 50px;z-index: 10;
 }
-body {
+.App {
+  height: 100vh;
+}
+  
+.bg-img{
   background-image: url("../Bitmap.jpg");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;position: absolute;top: 0;left: 0;width: 100%;height: 40%;
 }
 input[type="text"] {
   width: 80%;
