--- a/src/components/Todos.css
+++ b/src/components/Todos.css
@@ -5,6 +5,9 @@
   border-radius: 5px;
   box-shadow: 0px 35px 50px -15px #c2c3d680;
 }
+.completed{
+  text-decoration: line-through;
+}
 .todos li {
   color: #494c6b;
 position: relative;
